# PyLight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
inc/pylight/: python.hh  result.hh  utils.hh
inc/pylight/module/: module.hh
inc/pylight/wrapped_types/: convert.hh  py_dict.hh  py_list.hh  py_object.hh  py_tuple.hh
src/: python.cc
src/module/: module.cc
src/wrapped_types/: py_dict.cc  py_list.cc
tests/: CMakeLists.txt  test_objects.cc
